<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>